--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "src/hooks.ts",
     "src/htmldomapi.ts",
     "src/is.ts",
+    "src/jsx.ts",
     "src/snabbdom.bundle.ts",
     "src/snabbdom.ts",
     "src/thunk.ts",
@@ -163,6 +164,9 @@
     "/es/is.d.ts",
     "/es/is.js",
     "/es/is.js.map",
+    "/es/jsx.d.ts",
+    "/es/jsx.js",
+    "/es/jsx.js.map",
     "/es/snabbdom.bundle.d.ts",
     "/es/snabbdom.bundle.js",
     "/es/snabbdom.bundle.js.map",
@@ -217,6 +221,10 @@
     "/is.d.ts",
     "/is.js",
     "/is.js.map",
+    "/jsx-global.d.ts",
+    "/jsx.d.ts",
+    "/jsx.js",
+    "/jsx.js.map",
     "/snabbdom.bundle.d.ts",
     "/snabbdom.bundle.js",
     "/snabbdom.bundle.js.map",
